# raffly

./: .gitignore  canister_ids.json  commands.md  dfx.json  package-lock.json  package.json
contract/: Cargo.toml  build.sh
contract/liquid_raffle/: Cargo.toml  build.sh
contract/liquid_raffle/res/: liquid_raffle.wasm
contract/liquid_raffle/src/: callbacks.rs  internal.rs  lib.rs  migration.rs  owner_changes.rs  read.rs  types.rs
contract/raffle/: Cargo.toml  build.sh
contract/raffle/src/: lib.rs
contract/raffle_factory/: Cargo.toml  build.sh
contract/raffle_factory/res/: raffle_factory.wasm
contract/raffle_factory/src/: callbacks.rs  lib.rs
frontend/: App.jsx  index.html  index.js
frontend/src/pages/Layout/: Layout.jsx
frontend/src/pages/Raffle/: Raffle.jsx  Raffle.module.scss  RaffleContainer.jsx  RaffleContext.js  RaffleProvider.jsx  index.js  useLoadData.js  useRaffle.js
frontend/src/services/near/: NearContext.js  NearProvider.jsx  config.js  index.js  useNear.js  useWalletSelector.js  utils.js
frontend/src/shared/Button/: Button.jsx  Button.module.scss
frontend/src/shared/Checkbox/: Checkbox.jsx  Checkbox.module.scss
frontend/src/shared/CountDown/: CountDown.jsx  CountDown.module.scss
frontend/src/shared/Icon/: Icon.jsx  Icon.module.scss
frontend/src/shared/Input/: Input.jsx  Input.module.scss
frontend/src/shared/Stat/: Stat.jsx  Stat.module.scss
frontend/src/styles/: fn.scss  fonts.scss  root.scss  variables.scss
frontend/src/utils/: constants.js  converter.js  formatter.js  logger.js
(+24 files in other folders)
