[package]
name = "liquid_raffle"
version = "1.0.0"
authors = ["Ihor Verkhohliad <ihor.verkhohliad@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
rand= "0.7.3"
uint = { version = "0.9.3", default-features = false }
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
